added services and contact section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rasta's Mobile Repair Workshop</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body>
     <!--Header-->
@@ -56,6 +59,26 @@
           <img src="./assets/icons/brake-repair.png" alt="brake repair icon" />
           <h3>Break Repair</h3>
         </div>
+        <div class="service">
+          <img src="./assets/icons/vehicle-service.png" alt="Vehicle service icon" />
+          <h3>Vehicle service</h3>
+        </div>
+        <div class="service">
+          <img src="./assets/icons/timing-kit.png" alt="Timing kit icon" />
+          <h3>Timing kit change</h3>
+        </div>
+        <div class="service">
+          <img src="./assets/icons/engine-rebuild.png" alt="Engine rebuilds icon" />
+          <h3>Engine rebuilds</h3>
+        </div>
+        <div class="service">
+          <img src="./assets/icons/diagnosis.png" alt="Diagnosis icon" />
+          <h3>Diagnosis</h3>
+        </div>
+        <div class="service">
+          <img src="./assets/icons/more-information.png" alt="and more icon" />
+          <h3>and more...</h3>
+        </div>
         <!--I will add more services here-->
       </div>
     </section>
@@ -77,16 +100,20 @@
         "Excellent service and reliable repairs every time!" - Happy Customer
       </p>
     </section>
-
+    <div class="contact-section">
     <!--Contact section-->
     <section id="contact">
       <h2>Contact Us</h2>
-      <p>Address: 123 Ford Lane, Your City, Your State</p>
-      <p>Phone: +1234567890</p>
+      <p>Address: 24 Sharp street, Bellevue, Johannesburg, 2198</p>
+      <p>Phone: +27 82 831-0252</p>
       <p>Email: info@workshop.com</p>
-      <!-- Embedded Google Maps will be added here -->
     </section>
-
+    
+    <!--Google Maps section-->
+    <section id="google-maps">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28645.37312637512!2d28.07072269623079!3d-26.17482131952097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e950dcbdcefe4b5%3A0x3e969619689399d1!2s24%20Sharp%20St%2C%20Bellevue%2C%20Johannesburg%2C%202198!5e0!3m2!1sen!2sza!4v1731225054943!5m2!1sen!2sza" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    </div>
     <!--Footer-->
     <footer>
       <p>
